apps/production/client-sites/catalina-rocha/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalina-rocha
  namespace: lulo-demo-landings
  labels:
    app: catalina-rocha
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catalina-rocha
  template:
    metadata:
      labels:
        app: catalina-rocha
        name: catalina-rocha
    spec:
      containers:
      - name: catalina-rocha
        image: "registry.yesidlopez.de/catalina-rocha:v1.0.21" # {"$imagepolicy": "lulo-demo-landings:catalina-rocha"}
        ports:
        - containerPort: 3000
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 15
          periodSeconds: 20
        resources:
          requests:
            memory: "128Mi"
            cpu: "50m"
          limits:
            memory: "256Mi"
            cpu: "300m"
      imagePullSecrets:
      - name: registry-secret
