apps/production/client-sites/catalina-rocha/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: catalina-rocha
  name: catalina-rocha
  namespace: lulo-demo-landings
spec:
  selector:
    app: catalina-rocha
  type: ClusterIP
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
