apps/production/client-sites/catalina-rocha/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalina-rocha
  namespace: lulo-demo-landings
  annotations:
    cert-manager.io/cluster-issuer: luloai-issuer
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/target: homelab.luloai.com
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: catalina-rocha-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "Demo Lulo AI"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - catalina-rocha.demo.luloai.com
      secretName: catalina-rocha-tls
  rules:
    - host: catalina-rocha.demo.luloai.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: catalina-rocha
                port:
                  number: 3000
